--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation files('libs/jdbc-8.0.11.jar')
     implementation 'com.android.volley:volley:1.1.1'
+    testImplementation 'org.json:json:20140107'
 }
