--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'org.json:json:20140107'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
