--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'org.json:json:20140107'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
+
 }
