--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,15 @@
             <category android:name="android.intent.category.ALTERNATIVE" />
 
         </intent-filter>
-    </activity>
+        </activity>
+        <activity android:name=".FahrtDetailActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.ALTERNATIVE" />
+
+            </intent-filter>
+        </activity>
         <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
     </application>
 
