--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity2"
+            android:name=".NavigationActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -35,14 +35,6 @@
                 <category android:name="android.intent.category.ALTERNATIVE" />
 
             </intent-filter>
-        </activity>
-        <activity android:name=".ListViewActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.ALTERNATIVE" />
-
-        </intent-filter>
         </activity>
         <activity android:name=".FahrtDetailActivity">
             <intent-filter>
